--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-tensorflow==2.19.0
+torch>=2.2.0
+torchvision>=0.17.0
+opencv-python>=4.8.0
+dlib>=19.24.0           # (선택) dogHeadDetector.dat 사용 시 필요
+numpy>=1.26.0
+pandas>=2.2.0
+tqdm>=4.66.0
 pathlib
-numpy
-pandas
-matplotlib
-seaborn
-scikit-learn
-keras
-torch
-opencv-python==4.10.0.84
-tqdm
