--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 torch>=2.2.0
 torchvision>=0.17.0
 opencv-python>=4.8.0
-dlib>=19.24.0           # (선택) dogHeadDetector.dat 사용 시 필요
+dlib>=19.24.0 
 numpy>=1.26.0
 pandas>=2.2.0
 tqdm>=4.66.0
